--- a/Notebook/app/src/main/res/values/colors.xml
+++ b/Notebook/app/src/main/res/values/colors.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primaryColor">#252525</color>
+    <color name="primaryLightColor">#4d4d4d</color>
+    <color name="primaryDarkColor">#000000</color>
+    <color name="secondaryColor">#3b3b3b</color>
+    <color name="secondaryLightColor">#656565</color>
+    <color name="secondaryDarkColor">#151515</color>
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="secondaryTextColor">#ffffff</color>
+
+    <color name="backgroundColor">#252525</color>
+
+    <color name="noteOneColor">#FD99FF</color>
+    <color name="noteTwoColor">#FF9E9E</color>
+    <color name="noteThreeColor">#91F48F</color>
+    <color name="noteFourColor">#FFF599</color>
+    <color name="noteFiveColor">#9EFFFF</color>
+    <color name="noteSixColor">#B69CFF</color>
 </resources>
